src/index.css
* {
  -webkit-tap-highlight-color: transparent;
  user-select: none;
}

button,
[role='button'],
[type='button'] {
  -webkit-tap-highlight-color: transparent;
  user-select: none;
  touch-action: manipulation;
}

html {
  background-color: black;
}

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: black;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;
  padding: 0;
  font-family: 'Roboto', Arial, sans-serif;
}

button {
  all: unset;
  display: inline-block;
  background: none;
  border: none;
  padding: 0;
  margin: 0;
  text-align: inherit;
  font: inherit;
  color: inherit;
  cursor: pointer;
}

button:hover {
  border-color: #646cff;
}

button:focus,
button:focus-visible {
  outline: none;
  box-shadow: none;
}

h1 {
  margin: 0;
}

